--- a/pages/components/listproduct/listproduct.module.css
+++ b/pages/components/listproduct/listproduct.module.css
@@ -1,10 +1,37 @@
+.product {
+  padding: 10px 10px;
+  justify-content: center;
+}
 .list {
     display: grid;
     grid-template-columns:repeat(5, 1fr);
-  }
-  .name {
-  
-  }
-  .price {
-  
-  }
+}
+.imgView {
+  width: 150px;
+  height: 150px;
+  padding: 0 12px;
+}
+.imgView img {
+  max-width: 150px;
+  max-height: 150px;
+}
+.infoView {
+  padding: 12px 16px;
+}
+.name {
+  overflow: hidden;
+}
+.name span {
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+}
+.price {
+
+}
+.price span {
+    font-size: 15px;
+    font-weight: bold;
+    line-height: 24px;
+}
+ 
