--- a/pages/components/listproduct/listproduct.module.css
+++ b/pages/components/listproduct/listproduct.module.css
@@ -13,6 +13,7 @@
   width: 150px;
   height: 150px;
   padding: 0 12px;
+  position: relative
 }
 .imgView img {
   max-width: 150px;
@@ -80,7 +81,7 @@
 
  .freeship {
   position: absolute;
-  top: 5px;
-  left: 5px;
-  height: 18px;
+  bottom: 0px;
+  left: 0px;
+  height: 25px;
 }
