--- a/pages/shoppingcart/shoppingcart.module.css
+++ b/pages/shoppingcart/shoppingcart.module.css
@@ -12,7 +12,24 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    width: 70%;
 }
+
+.infoView {
+  display: flex;
+  flex-direction: row;
+}
+
+.sumView {
+  width: 20%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 10px 20px;
+  display: flex;
+  flex-direction: column;
+  margin-left: 10px;
+}
+
 .cartItem {
     display: flex;
     flex-direction: row;
@@ -33,3 +50,71 @@
     display: flex;
     flex: 1;
 }
+.mymodal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 500px;
+    transform: translate(-50%, -50%);
+  
+    border: 1px solid #ccc;
+    background: #fff;
+    overflow: auto;
+    border-radius: 4px;
+    outline: none;
+    padding: 10px;
+  }
+  
+  .myoverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0, 0, 0, 0.50);
+  }
+
+  .dialogView {
+
+  }
+
+  .buttonAction {
+    display: flex;
+    text-align: center;
+    color: rgb(13, 92, 182);
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 500;
+    padding: 0px 24px 24px;
+    -webkit-box-pack: center;
+    justify-content: center;
+  }
+
+  .dialogView .action {
+    padding: 8px 16px;
+    border: 1px solid rgb(255, 66, 78);
+    background-color: rgb(255, 66, 78);
+    color: rgb(255, 255, 255);
+    margin-left: 16px;
+    flex-basis: 100%;
+  }
+
+  .dialogView .close {
+    padding: 8px 16px;
+    border-radius: 4px;
+    border: 1px solid rgb(13, 92, 182);
+    flex-basis: 100%;
+  }
+
+  .dialogHeader {
+    text-align: left;
+    padding: 0px 24px 24px;
+    color: rgb(36, 36, 36);
+    font-size: 17px;
+  }
+
+  .price {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
